[gd_scene load_steps=9 format=3 uid="uid://b8xhk3p2w5nqm"]

[ext_resource type="Script" uid="uid://dvc6xora2o1sl" path="res://scripts/SoulInventoryV2.gd" id="1_soul_v2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.08, 0.08, 0.1, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.5, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.2, 0.18, 0.12, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.4, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.25, 0.22, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.7, 0.4, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.3, 0.25, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.6, 0.3, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grid"]
bg_color = Color(0.05, 0.05, 0.08, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.35, 0.15, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.4, 0.15, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tooltip"]
bg_color = Color(0.02, 0.02, 0.05, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.5, 0.2, 1)

[node name="SoulInventoryV2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_soul_v2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -340.0
offset_right = 500.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="TopBar" type="HBoxContainer" parent="MainPanel"]
layout_mode = 1
offset_left = 15.0
offset_top = 15.0
offset_right = 985.0
offset_bottom = 55.0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainPanel/TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 32
text = "魂印背包"

[node name="Spacer" type="Control" parent="MainPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CountLabel" type="Label" parent="MainPanel/TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.7, 0.35, 1)
theme_override_font_sizes/font_size = 20
text = "魂印: 0"

[node name="GoldSeparator" type="ColorRect" parent="MainPanel/TopBar"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
color = Color(0.6, 0.5, 0.2, 1)

[node name="CloseButton" type="Button" parent="MainPanel/TopBar"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "关闭"

[node name="HSeparator" type="ColorRect" parent="MainPanel"]
layout_mode = 1
offset_left = 15.0
offset_top = 65.0
offset_right = 985.0
offset_bottom = 68.0
color = Color(0.6, 0.5, 0.2, 0.5)

[node name="ContentContainer" type="HBoxContainer" parent="MainPanel"]
layout_mode = 1
offset_left = 15.0
offset_top = 78.0
offset_right = 985.0
offset_bottom = 665.0
theme_override_constants/separation = 15

[node name="LeftPanel" type="VBoxContainer" parent="MainPanel/ContentContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ToolBar" type="HBoxContainer" parent="MainPanel/ContentContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FilterLabel" type="Label" parent="MainPanel/ContentContainer/LeftPanel/ToolBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.7, 0.35, 1)
theme_override_font_sizes/font_size = 16
text = "筛选:"

[node name="AllButton" type="Button" parent="MainPanel/ContentContainer/LeftPanel/ToolBar"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "全部"

[node name="VSeparator1" type="ColorRect" parent="MainPanel/ContentContainer/LeftPanel/ToolBar"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
color = Color(0.5, 0.4, 0.2, 0.5)

[node name="RotateButton" type="Button" parent="MainPanel/ContentContainer/LeftPanel/ToolBar"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
disabled = true
text = "旋转 [R]"

[node name="DeleteButton" type="Button" parent="MainPanel/ContentContainer/LeftPanel/ToolBar"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
disabled = true
text = "删除 [Del]"

[node name="Spacer" type="Control" parent="MainPanel/ContentContainer/LeftPanel/ToolBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StarterButton" type="Button" parent="MainPanel/ContentContainer/LeftPanel/ToolBar"]
custom_minimum_size = Vector2(140, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "领取新手魂印"

[node name="GridPanel" type="Panel" parent="MainPanel/ContentContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_grid")

[node name="GridContainer" type="Control" parent="MainPanel/ContentContainer/LeftPanel/GridPanel"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="Background" type="ColorRect" parent="MainPanel/ContentContainer/LeftPanel/GridPanel/GridContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.01)

[node name="RightPanel" type="Panel" parent="MainPanel/ContentContainer"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/ContentContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DetailContainer" type="VBoxContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TitleMargin" type="MarginContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="TitleLabel" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/TitleMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 22
text = "魂印详情"
horizontal_alignment = 1

[node name="Separator1" type="ColorRect" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.6, 0.5, 0.2, 0.5)

[node name="InfoMargin" type="MarginContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20

[node name="InfoContainer" type="VBoxContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SoulName" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "未选择魂印"
horizontal_alignment = 1

[node name="Separator2" type="ColorRect" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.5, 0.4, 0.2, 0.3)

[node name="QualityContainer" type="HBoxContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer/QualityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "品质:"

[node name="Value" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer/QualityContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="ShapeContainer" type="HBoxContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer/ShapeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "形状:"

[node name="Value" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer/ShapeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16

[node name="PowerContainer" type="HBoxContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer/PowerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "力量:"

[node name="Value" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer/PowerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 16

[node name="Separator3" type="ColorRect" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.5, 0.4, 0.2, 0.3)

[node name="DescriptionLabel" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
autowrap_mode = 3

[node name="Separator4" type="ColorRect" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.6, 0.5, 0.2, 0.5)

[node name="LegendMargin" type="MarginContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LegendContainer" type="VBoxContainer" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/LegendMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/LegendMargin/LegendContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.7, 0.35, 1)
theme_override_font_sizes/font_size = 16
text = "品质图例"

[node name="Common" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/LegendMargin/LegendContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "◆ 普通"

[node name="Uncommon" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/LegendMargin/LegendContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "◆ 非凡"

[node name="Rare" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/LegendMargin/LegendContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.5, 1, 1)
theme_override_font_sizes/font_size = 14
text = "◆ 稀有"

[node name="Epic" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/LegendMargin/LegendContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.3, 1, 1)
theme_override_font_sizes/font_size = 14
text = "◆ 史诗"

[node name="Legendary" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/LegendMargin/LegendContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0, 1)
theme_override_font_sizes/font_size = 14
text = "◆ 传说"

[node name="Mythic" type="Label" parent="MainPanel/ContentContainer/RightPanel/ScrollContainer/DetailContainer/LegendMargin/LegendContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "◆ 神话"

[node name="TooltipPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 240.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tooltip")

[node name="TooltipMargin" type="MarginContainer" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TooltipText" type="RichTextLabel" parent="TooltipPanel/TooltipMargin"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "提示内容"
fit_content = true
scroll_active = false

[connection signal="pressed" from="MainPanel/TopBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MainPanel/ContentContainer/LeftPanel/ToolBar/AllButton" to="." method="_on_filter_all_pressed"]
[connection signal="pressed" from="MainPanel/ContentContainer/LeftPanel/ToolBar/RotateButton" to="." method="_on_rotate_button_pressed"]
[connection signal="pressed" from="MainPanel/ContentContainer/LeftPanel/ToolBar/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="MainPanel/ContentContainer/LeftPanel/ToolBar/StarterButton" to="." method="_on_starter_button_pressed"]
